--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,4 @@
+org.gradle.java.home=C:/Program Files/Java/jdk-17.0.12
 org.gradle.jvmargs=-Xmx1536M
-android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
